fix generation of DSA/ElGamal keys with GnuPG 1.x

The name "ELG" for ElGamal keys only works with 2.x. Use ELG-E which works with
both 1.4 and 2.0.18. It will not work with 2.0.0, but given that it's only that
single version and it is more than 5 years old I don't care.

BUG:253408
FIXED-IN:4.8.3